--- a/content/lessons/genesis-pt2.mdx
+++ b/content/lessons/genesis-pt2.mdx
@@ -7,4 +7,6 @@ contentType: 'challenge'
 
 Use the following command to decode Satoshi's secret HEX message into ASCII, a more human readable format:
 
+```shell
 echo scriptSigHex | xxd -r -p
+```
