Add <> to the "scriptSigHex" in the example command.
- From how the example command is written, it is not
evident that the "scriptSigHex" needs to be replaced
by the message found in the last exercise to complete
this exercise correctly.

- This commit adds the carets to the scriptSigHex and
makes subsequent changes to the preceding text to make
the exercise's goal clearer to understand.

--- a/content/lessons/genesis-pt2.mdx
+++ b/content/lessons/genesis-pt2.mdx
@@ -5,8 +5,8 @@ contentType: 'challenge'
 
 # Let's make sense of this
 
-Use the following command to decode Satoshi's secret HEX message into ASCII, a more human readable format:
+To decode Satoshi's secret hidden in the message you saw in the last exercise, use the following command and replace \<scriptSigHex\> with the message to interpret it.
 
 ```shell
-echo scriptSigHex | xxd -r -p
+echo <scriptSigHex> | xxd -r -p
 ```
