--- a/content/lessons/transacting-2.mdx
+++ b/content/lessons/transacting-2.mdx
@@ -12,5 +12,5 @@ Once you've found it, decode the hidden message, just like we did in the previou
 And remember, 'Bitcoin is for everyone.'
 
 ```shell
-echo scriptSigHex | xxd -r -p
+echo <scriptSigHex> | xxd -r -p
 ```
